--- a/serioussystersblog.html
+++ b/serioussystersblog.html
@@ -29,7 +29,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div class="w3-col l8 s12">
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-    <img src="/w3images/woods.jpg" alt="Nature" style="width:100%">
+    <img src="pictures\homelessplate.jpg" alt="Plate" style="width:100%">
     <div class="w3-container">
       <h3><b>FEEDING THE HOMELESS</b></h3>
       <h5>Feeding the less fortunate in our Community, <span class="w3-opacity">SEPTEMBER 2024</span></h5>
