C:\Users\n\Pictures\20240428_135556.jpg

--- a/serioussystersblog.html
+++ b/serioussystersblog.html
@@ -29,7 +29,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div class="w3-col l8 s12">
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-    <img src="pictures\homelessplate.jpg" alt="Plate" style="width:100%">
+    <img src="pictures\20230508_190714.jpg" alt="Plate" style="width:100%">
     <div class="w3-container">
       <h3><b>FEEDING THE HOMELESS</b></h3>
       <h5>Feeding the less fortunate in our Community, <span class="w3-opacity">SEPTEMBER 2024</span></h5>
@@ -68,7 +68,7 @@ Thank you for considering this important cause. Together, we can create lasting 
 
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-  <img src="/20240428_135556.jpg" alt="Norway" style="width:100%">
+  <img src="/20240428_13555" alt="Norway" style="width:100%">
     <div class="w3-container">
       <h3><b>BLOG ENTRY</b></h3>
       <h5>FEEDING THE LESS FORTUNATE, <span class="w3-opacity">SEPTEMBER 2024 For the month of September Serious Systars has fed over 1005 women, men, children and 4 dogs with the help of our faithful volunteers.</span></h5>
